Header shifting fix in mobile [Finished #151298909]

--- a/david_yurman/custom.css
+++ b/david_yurman/custom.css
@@ -288,4 +288,8 @@ input.check_boxes {
     text-align: left !important;
   }
 }
+
+body.keyboard-on #middle {
+  padding-top: 0px !important;
+}
 </style>
